added gradient background

--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@
 
 }
 
+#highlights {
+  padding: 24px;
+  background: linear-gradient(0, rgb(227, 255,253), rgb(202,  243, 240));
+}
+
 #highlights h2 {
   text-transform: uppercase;
   text-align: center;
